Componitised and fixed up the splash screen

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,7 @@
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: transparent;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: transparent;
+  color-scheme: dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
