--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,33 @@ h1 {
   line-height: 1.1;
 }
 
+h2 {
+  font-size: 2.4em;
+  line-height: 1.1;
+}
+
+h3 {
+  font-size: 1.8em;
+  line-height: 1.1;
+}
+
+h4 {
+  font-size: 1.6em;
+  line-height: 1.1;
+}
+
+h5 {
+  font-size: 1.4em;
+  line-height: 1.1;
+}
+
+h6 {
+  font-size: 1.2em;
+  line-height: 1.1;
+}
+
+
+
 .ͼ1.cm-editor.cm-focused {
   outline: none;
 }
